docs(engineering): 重构工程效率模块并完善章节内容
- 删除工程效率总览文档，改用更清晰的目录结构
- 修改侧边栏链接，将 '/engineering/0_engineering' 更新为 '/engineering/0_overview'
- 新增构建工具章节，详细介绍 Maven、Gradle、增量构建及私有仓库配置
- 丰富开发工具章节，补充 IntelliJ IDEA 快捷键、调试技巧、推荐插件及效率工具说明
- 扩充代码质量章节，涵盖 SonarQube、Checkstyle、SpotBugs、JaCoCo 代码覆盖率及技术债管理
- 补全线上诊断内容，介绍 Arthas 使用、线程分析、内存分析及 GC 分析方法
- 完善 API 文档章节，覆盖 Springdoc OpenAPI3、Knife4j 集成、接口规范及文档版本化导出
- 添加依赖治理章节初步结构，包含依赖分类及版本冲突排查指导
- 调整整体目录链接和内容排版，提升文档逻辑性和易读性